done adding native camera

--- a/app.json
+++ b/app.json
@@ -1,4 +1,13 @@
 {
   "name": "favourite_place",
-  "displayName": "favourite_place"
+  "displayName": "favourite_place",
+
+  "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ]
 }
