--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.5.0",
-    "expo": "^51.0.0"
+    "expo": "^51.0.0",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
