--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.4",
     "expo": "^51.0.0",
     "expo-constants": "^16.0.2",
     "expo-image-picker": "~15.0.7",
