--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-maps": "^1.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
+    "react-native-select-contact": "^1.6.3",
     "react-native-svg": "^15.5.0"
   },
   "devDependencies": {
