--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "expo-constants": "^16.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
+    "expo-sqlite": "~14.0.6",
     "react": "18.2.0",
+    "react-loading": "^2.0.3",
     "react-native": "0.74.3",
     "react-native-maps": "^1.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-select-contact": "^1.6.3",
-    "react-native-svg": "^15.5.0"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,6 +37,7 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
